# tink

./: .gitignore  README.md
config/: variables.hpp
node/: .env  index.js  package.json
resources/: name.service
source/: Makefile
source/usr/base/: CMakeLists.txt  main_response.cpp
source/usr/base/src/: Response.cpp
source/usr/include/: base.hpp  lib.hpp  target.hpp
source/usr/lib/: Worker.cpp
